--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,18 @@ bin-release/
 
 # Other files and folders
 .settings/
+.venv/
+.vscode/
+.idea/
+.__pycache__/
+.config.json
 
 # Executables
 *.swf
 *.air
 *.ipa
 *.apk
+
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
